# hiveID

./: .gitignore  Cargo.toml  README.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/components/common/: Details.vue
frontend/src/components/invites/: Pending.vue  Redeemed.vue  Used.vue
frontend/src/components/log/: LogItem.vue
frontend/src/components/navigation/: Sidebar.vue
frontend/src/components/services/: ServiceItem.vue
frontend/src/components/toast/: ToastItem.vue
frontend/src/router/: index.ts
frontend/src/router/guards/: afterEach.ts
frontend/src/router/views/: RouteAccount.vue  RouteHome.vue  RouteInvites.vue  RouteLog.vue  RoutePermissions.vue  RouteServices.vue
frontend/src/style/: index.scss
frontend/src/style/app/: _user.scss  index.scss
frontend/src/style/app/audit/: _list.scss
frontend/src/style/app/home/: _home-service.scss  index.scss
frontend/src/style/app/invites/: _list.scss
frontend/src/style/app/navigation/: _sidebar.scss
frontend/src/style/app/services/: _list.scss
frontend/src/style/generic/: _animation.scss  _layout.scss  _tag.scss  _toast.scss  _tooltip.scss  index.scss
frontend/src/style/generic/button/: _button.scss  button-colors.scss  button-sizes.scss  detail.scss
frontend/src/style/generic/form/: _text.scss
frontend/src/style/setup/: _variables.scss
idbin/: Cargo.toml  README.md  config.toml.example
idbin/migrations/: 0001_initial.sql  0002_add_service_revoke_url.sql
idbin/src/: account.rs  accounts.rs  audit.rs  audits.rs  auth.rs  error.rs  home.rs  invite.rs  invites.rs  logging.rs  login.rs  main.rs  permissions.rs  refresh.rs  register.rs  services.rs  status.rs  token.rs
idbin/static/: style.css
idbin/static/style/: form.css  log.css  permission.css  service-item.css  table.css
idbin/templates/: account.html  audit.html  home.html  invite.html  login.html  page.html  permissions.html  register.html  services.html  status.html
idbin/tests/: common.rs  test_account.rs
idbin/tests/integration/: common.rs  main.rs  test_account.rs  test_auth.rs  test_service.rs
idlib/: Cargo.toml
idlib/src/: authenticate.rs  authorize.rs  error.rs  lib.rs
