[package]
name = "idbin"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.57"
argon2 = { version = "0.4.1", features = ["std"] }
askama = { version = "0.11.1", features = ["mime", "mime_guess"] }
async-trait = "0.1.57"
axum = { version = "0.6", features = ["http1", "query", "headers", "ws", "multipart", "macros"] }
base64 = "0.13.0"
blob-uuid = "0.5.0"
bytes = "1.1.0"
cookie = { version = "0.16.0", features = ["secure", "percent-encode"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.21"
hmac = "0.12.1"
humantime = "2.1.0"
hyper = "0.14.23"
idlib = { path = "../idlib" }
jwt = "0.16"
log = "0.4.17"
rand = "0.8.5"
relativetime = "0.1.4"
reqwest = { version = "0.11.11", default-features = false, features = ["json", "rustls-tls-native-roots"] }
rusqlite = "0.27.0"
rusqlite_migration = { git = "https://github.com/cljoly/rusqlite_migration" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_rusqlite = "0.30.1"
sha2 = "0.10.2"
thiserror = "1.0.31"
time = "0.3.13"
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "sync", "net", "io-util"] }
tokio-rusqlite = "0.2.0"
toml = "0.5.9"
tower-http = { version = "0.3.4", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
url = "2.2.2"
urlencoding = "2.1.0"
