[package]
name = "idbin"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.71"
argon2 = { version = "0.5.0", features = ["std"] }
askama = { version = "0.12.0", features = ["mime", "mime_guess"] }
async-trait = "0.1.68"
axum = { version = "0.6.18", features = ["http1", "query", "headers", "ws", "multipart", "macros"] }
axum-macros = "0.3.7"
base64 = "0.21.0"
blob-uuid = "0.5.0"
bytes = "1.4.0"
cookie = { version = "0.17.0", features = ["secure", "percent-encode"] }
dotenv = "0.15.0"
futures = "0.3.28"
hmac = "0.12.1"
hyper = "0.14.26"
idlib = { path = "../idlib" }
jwt = "0.16.0"
log = "0.4.17"
rand = "0.8.5"
reqwest = { version = "0.11.17", default-features = false, features = ["json", "rustls-tls-native-roots"] }
rusqlite = "0.28.0"
rusqlite_migration = { git = "https://github.com/cljoly/rusqlite_migration" }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
serde_rusqlite = "0.31.0"
sha2 = "0.10.6"
thiserror = "1.0.40"
time = { version = "0.3.21", features = ["serde"] }
tokio = { version = "1.28.0", default-features = false, features = ["rt", "rt-multi-thread", "sync", "net", "io-util"] }
tokio-rusqlite = "0.3.0"
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.3.1"
urlencoding = "2.1.2"
utoipa = { version = "3.3.0", features = ["axum_extras", "time"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }

[dev-dependencies]
asserhttp = { version = "0.6.1", features = ["ureq"] }
assert_cmd = "2.0.11"
jsonpath-rust = "0.3.0"
portpicker = "0.1.1"
temp-dir = "0.1.11"
ureq = { version = "2.6.2", features = ["json"] }
